# ha-tunnel

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  repository.json  repository.yaml
.github/workflows/: ci.yml  release.yml
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
addon/translations/: en.yaml
client/: Cargo.toml  Dockerfile  Dockerfile.ci  config.toml
client/src/: config.rs  main.rs  proxy.rs  tunnel_client.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  tunnel.rs
server/: Cargo.toml  Dockerfile  Dockerfile.ci  config.toml
server/src/: auth.rs  client_ip.rs  config.rs  main.rs  proxy.rs
