[package]
name = "ha-tunnel-client"
description = "Home Assistant Tunnel Client - bridge between the remote server and local home assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

anyhow = "1.0"

config = "0.15"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19.0", features = ["v4"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
