[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"

thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-tungstenite = "0.28"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
axum = "0.8.7"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
