[package]
name = "ha-tunnel-server"
description = "Home Assistant Tunnel Server - forwards calls to local running client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

anyhow = "1.0"
dashmap = "6.1"

config = "0.15"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = "0.3"

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }

serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
